--- a/survey-banner/banner.css
+++ b/survey-banner/banner.css
@@ -6,20 +6,26 @@
 
 
 .survey {
-	background-color: #353535;
+	background-color: #333;
 	color: white;
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 13px;
+	font-size: 14px;
+	padding: 5px;
+	display: flex;
+	align-items: center;
 }
 
 .surveyicon {
 	width: 30px;
+	height: 30px;
 	padding: 4px;
+	margin-right: 7px;
+	display: inline;
 }
 
 .survey p {
-/*	padding-left: 28px;*/
+	display: inline-block;
 }
 
 .survey a {
