--- a/survey-banner/banner.css
+++ b/survey-banner/banner.css
@@ -9,8 +9,7 @@
 	background-color: #333;
 	margin: 0;
 	font-family: 'Open Sans', sans-serif;
-	padding: 5px;
-	padding-left: 10px;
+	padding: 5 10 5 10px;
 	display: flex;
 	align-items: center;
 }
