Back to px for img

--- a/survey-banner/banner.css
+++ b/survey-banner/banner.css
@@ -15,8 +15,8 @@
 }
 
 .surveyicon {
-	width: 2rem;
-	height: 2rem;
+	width: 30px;
+	height: 30px;
 	padding: 4px;
 	margin-right: 7px;
 	display: inline;
